@@ -1,0 +1,5 @@
+<p class="start"><%= current_engine %></p>
+<p class="haml"><%= haml :'partials/_haml' %></p>
+<p class="erb"><%= erb  :'partials/_erb' %></p>
+<p class="slim"><%= slim :'partials/_slim' %></p>
+<p class="end"><%= current_engine %></p>
