@@ -1,0 +1,5 @@
+%p.start= current_engine
+%p.haml= haml :'partials/_haml'
+%p.erb= erb  :'partials/_erb'
+%p.slim= slim :'partials/_slim'
+%p.end= current_engine
