@@ -1,0 +1,5 @@
+%p.start= current_engine
+%p.haml= partial 'current_engines/haml'
+%p.erb= partial 'current_engines/erb'
+%p.slim= partial 'current_engines/slim'
+%p.end= current_engine
