@@ -46,4 +46,15 @@ class TestRenderHelpers < Test::Unit::TestCase
       assert_have_selector 'p', :content => "Extra is bar"
     end
   end
+
+  context 'for #current_engine method' do
+    should 'detect correctly current engine for a padrino application' do
+      visit '/current_engine'
+      assert_have_selector 'p.start', :content => "haml"
+      assert_have_selector 'p.haml',  :content => "haml"
+      assert_have_selector 'p.erb',   :content => "erb"
+      assert_have_selector 'p.slim',  :content => "slim"
+      assert_have_selector 'p.end',   :content => "haml"
+    end
+  end
 end
