@@ -53,6 +53,7 @@
 * Fix stop daemonized padrino from non standard path
 * Fix app path when generating sub-applications
 * Use sass gem because now is separated from haml
+* Allow combining different templates (ex: render a partial built with haml from a slim/erubis view)
 
 == 0.9.23
 
